--- a/src/index.scss
+++ b/src/index.scss
@@ -16,5 +16,4 @@ html {
 body {
   font-family: 'Roboto', sans-serif;
   box-sizing: border-box;
-  overflow: hidden;
 }
